Manifests/ingresspathpaseroutingallmicroservices.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akashdevopsdomainingressrule
  namespace: test
spec:
  ingressClassName: nginx
  rules:
  - host: akashdevops.co.in
    http:
      paths:
      - pathType: Prefix
        path: "/maven-web-application"
        backend:
          service:
            name: javawebapp-svc
            port:
              number: 80
      - pathType: Prefix
        path: "/java-web-application"
        backend:
          service:
            name: javawebapp
            port:
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: springboot-svc
            port:
              number: 80
